--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=patient-management
+
+server.port=9191
+server.contextPath-path=/v1/hms/patient
+
+# DATASOURCE PROPERTIES
+spring.datasource.url=jdbc:postgresql://localhost:5432/hospital
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=phong0222
+
+# JPA SPECIFIC PROPERTIES
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.data.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# LOGGING
+logging.file.name=patient-management.log
+logging.file.max-size=10MB
+logging.file.max-history=10
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg%n
