--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=patient-management
 
+spring.config.import=optional:secrets.properties
+
 server.port=9191
-server.contextPath-path=/v1/hms/patient
+server.servlet.context-path=/patient
 
 # DATASOURCE PROPERTIES
 spring.datasource.url=jdbc:postgresql://localhost:5432/hospital
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=phong0222
 
 # JPA SPECIFIC PROPERTIES
 spring.jpa.show-sql=true
