server.servlet.context-path=/patient

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=patient-management
 
 server.port=9191
-server.contextPath-path=/v1/hms/patient
+server.servlet.context-path=/patient
 
 # DATASOURCE PROPERTIES
 spring.datasource.url=jdbc:postgresql://localhost:5432/hospital
